tests/api/reference/negative/14-match-duplicate-capture.asm
const invalid: map = match.tokens(
    "value:name value:int",
    "name 42"
)
